transformation framework designed to be used in both serverside and desktop environments.

To facilitate desktop usage, a Graphical User Interface (GUI) is provided. 
The GUI is hosted on a separate sourceforge project 
(http://sourceforge.net/projects/daisymfcgui).

Report bugs and issues to:
http://sourceforge.net/tracker/?func=add&group_id=134191&atid=729299


***************************************
Pipeline Beta Release, 2009-12-22
***************************************

- New Hyphenator script, contributed by Joel Håkansson, TPB
- New DTBook to PEF script, contributed by Joel Håkansson, TPB
- New DTBook to text script, contributed by Joel Håkansson, TPB 
- New PEF File splitter script, contributed by Joel Håkansson, TPB
- New PEF File merger script, contributed by Joel Håkansson, TPB
- New ODT to DTBook script, contributed by Vincent Spiewak, Freelance.
- Beta version of a DAISY 2.02 to DAISY 3 text-only script based on XSLT, contributed by Alex Bernier, BrailleNet.
- Added Finnish localization of the Narrator transformers, contributed by Päivi Suhonen, Celia.
- Added Norwegian localization of the Narrator transformers, contributed by Olav Indergaard, NLB.
- Added Japanese localization of the Narrator transformers, contributed by ATDO
- Added support for country in the language codes of the ttsbuilder.xml
- Added an optional DTBookFix step to the DTBook to 2.02 text-only script
- Added a validator time tolerance parameter to the DAISY 3 to DAISY 2.02 converter
- Added a new int_daisy_metadataEditor transformer that is able to edit (add/overwrite/merge) metadata in a file or fileset
- Launcher scripts from the core ZIP distribution now have the "executable" permission
- SoX and LAME Universal Binaries are now bundled with the Mac OS X distribution, with no need to install them externally

... and many bug fixes, including:

- Fixed a bug in DTBookFixer: insertion of "docauthor" at the wrong place (reported by David Nelson)