@@ -73,7 +73,7 @@
 
       <h2 id="config">Configuration</h2>
       <p>Paths to third party executables called by the Pipeline are configurable in the Preferences dialog, which can be reached from the <code>Window</code> menu item.</p>
-      <p>Note that on Windows the installer takes care of setting the right paths and installing the required third party tools.</p>
+      <p>Note that on Windows and Mac OS X the installer takes care of setting the right paths and installing the required third party tools.</p>
       <p>The paths that <em>may</em> be set are:</p>
       <dl>
       <dt><code>Temporary Directory</code></dt><dd>Directory to store temporary files in. This directory <em>must</em> be set, and write access to it must be enabled.</dd>
