@@ -33,11 +33,11 @@
 		<p>Other versions of lames may be found amongst the links listed on the <a href="http://lame.sourceforge.net/links.php#Windows">Lame website</a></p>
 
 		<h3 id="mac">On Mac OS X</h3>
-		<p>The DAISY Pipeline disk image (.dmg) comes with a package installer that will install lame in <code>/usr/local/bin</code></p>
-		<p>You can also choose to install lame from unix port systems such as <a href="http://www.macports.org/">MacPorts</a> or <a href="http://www.finkproject.org/">Fink</a></p>
+		<p>The DAISY Pipeline.app application now bundles a Universal Binary build of lame.</p>
 		
+		<p>If you want to use another version you can choose to install lame separately, for instance from UNIX port systems such as <a href="http://www.macports.org/">MacPorts</a> or <a href="http://www.finkproject.org/">Fink</a></p>
 		<h3 id="linux">On Linux</h3>
-		<p>It is to install lame via the standard package system used by your Linux distribution (e.g. DEB or RPM). See your distribution documentation for more details.</p>
+		<p>It is recommended to install lame via the standard package system used by your Linux distribution (e.g. DEB or RPM). See your distribution documentation for more details.</p>
 		
 		
 		<h2 id="configure">Configuring the Lame path in the DAISY Pipeline</h2>
